# lex

./: .env.example  .formatter.exs  .gitignore  .mise.toml  AGENTS.md  LLM_SESSION_CONNECTION_REUSE_DESIGN.md  README.md  SPEC.md  Taskfile.yml  mix.exs  test_debug.exs
.ollama/: Modelfile
.opencode/agents/: Orbitor.md
.ponder/: .gitignore  config.json  snapshot.jsonl
assets/: tailwind.config.js
assets/css/: app.css
assets/js/: app.js
assets/js/hooks/: keyboard_nav.js  llm_popup.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: architecture_diagrams.md
lib/: lex.ex  lex_web.ex
lib/lex/: accounts.ex  application.ex  library.ex  reader.ex  repo.ex  text.ex  vocab.ex
lib/lex/accounts/: user.ex  user_target_language.ex
lib/lex/llm/: client.ex  client_behaviour.ex  client_mock.ex  session_connection_owner.ex
lib/lex/reader/: reading_event.ex  reading_position.ex  user_sentence_state.ex
lib/lex/text/: lexeme.ex  nlp.ex  sentence.ex  token.ex
lib/lex/vocab/: llm_help_request.ex  user_lexeme_state.ex
lib/lex_web/: endpoint.ex  layouts.ex  router.ex  telemetry.ex
lib/lex_web/components/: reader_components.ex
lib/lex_web/controllers/: calibre_cover_controller.ex  error_html.ex  error_view.ex
lib/lex_web/layouts/: app.html.heex  root.html.heex
priv/python/: lex_nlp.py  pyproject.toml
priv/python/lex_nlp/: __init__.py  cli.py  epub_parser.py  nlp_pipeline.py
priv/python/tests/: __init__.py  test_nlp_pipeline.py  test_pipeline.py
priv/repo/migrations/: 001_create_users.exs  002_create_user_target_languages.exs  (+10 more)
test/fixtures/: create_test_epub.exs
test/lex/: accounts_test.exs  library_test.exs  reader_test.exs  text_test.exs  vocab_test.exs
test/lex_web/: page_live_test.exs
test/support/: conn_case.ex  data_case.ex  llm_test_helpers.ex  test_llm_completion_plug.ex  test_llm_malformed_plug.ex  test_llm_streaming_plug.ex  test_llm_unauthorized_plug.ex
(+22 files in other folders)
