[project]
name = "lex-nlp"
version = "0.1.0"
description = "Lex NLP pipeline for text processing and analysis"
requires-python = ">=3.13"
dependencies = [
    "spacy>=3.7.0",
    "ebooklib>=0.18",
    "lxml>=5.3.0",
    "pytest>=9.0.2",
    "es-core-news-md",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lex_nlp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv.sources]
es-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_md-3.8.0/es_core_news_md-3.8.0-py3-none-any.whl" }
